Modificando ReadMe y agregando meta description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="MAQOR S.R.L.: Tu socio confiable en alquiler de grúas, manipuladores, plataformas y más. Con 40 años de experiencia, ofrecemos soluciones integrales con equipos de alta calidad para industria, logística y más. ¡Confía en nuestra experiencia y eficiencia!">
     <title>Maqor</title>
   </head>
   <body>
